@@ -48,6 +48,7 @@
     * Process all commands in a single thread -> racing avoided
     * Uploading from local web
     * Prusa Link version in INFO event
+    * G-code preview and download endpoints
 
 0.2.0 (2020-12-14)
 
